--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,4 +399,5 @@
     <string name="openPack">OpenPack</string>
     <string name="done_by">Done By</string>
     <string name="use">Use</string>
+    <string name="serial_location_transfer">Serial Location Transfer</string>
 </resources>
