add serial menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -401,4 +401,5 @@
     <string name="use">Use</string>
     <string name="serial_location_transfer">Serial Location Transfer</string>
     <string name="shipping_serialbase">Shipping Serial Base</string>
+    <string name="serial_base">Serial Base</string>
 </resources>
